--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,15 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.5.0 <4.0.0"
 
 dependencies:
   dart_frog: ^1.0.0
+  postgres: ^3.4.1
 
 dev_dependencies:
+  migrant: ^0.3.0
+  migrant_db_postgresql: ^0.3.0
   mocktail: ^1.0.0
   test: ^1.19.2
   very_good_analysis: ^5.1.0
