--- a/packages/services/pubspec.yaml
+++ b/packages/services/pubspec.yaml
@@ -6,6 +6,13 @@ publish_to: none
 environment:
   sdk: "^3.3.0"
 
+dependencies:
+  bcrypt: ^1.1.3
+  domain:
+    path: ../domain
+  repositories:
+    path: ../repositories
+
 dev_dependencies:
   mocktail: ^1.0.3
   test: ^1.25.2
